--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,76 +1,216 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 #contact_modal {
-    display: none;
+  display: none;
 }
 
 .photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
+  width: auto;
+  background-color: #fafafa;
+  height: 300px;
+  margin: 0 35px;
+  padding: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.photograph-header img {
+  width: 200px;
+  height: 200px;
+  display: block;
+  object-fit: cover;
+  border-radius: 50%;
+  overflow-clip-margin: unset; /* solution - images pixelisées */
+}
+
+.photograph-header h2 {
+  font-size: 64px;
+  color: #d3573c;
+}
+
+.photograph-header span {
+  font-size: 24px;
+  color: #901c1c;
+}
+
+.photograph-header span#photographerTagline {
+  font-size: 18px;
+  color: #525252;
+}
+
+.photograph-header p {
+  font-size: 18x;
+  color: #525252;
+}
+
+.media_page {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.media_page article {
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.media_page article img {
+  width: 350px;
+  height: 300px;
+  border-radius: 5px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.media_page article video {
+  width: 350px;
+  height: 300px;
+  border-radius: 5px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.media_page article h2 {
+  color: #d3573c;
+  font-size: 24px;
+  padding: 20px 0;
+}
+
+.media_page article h3 {
+  color: #901c1c;
+  font-size: 13px;
+  padding: 0;
+  margin: 0;
+}
+
+.media_page article p {
+  color: #000;
+  font-size: 10px;
+}
+
+.media_page article span {
+  color: #757575;
+  font-size: 16px;
+  /*position: absolute;*/
+  right: 0px;
+  bottom: 25px;
 }
 
 .contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
-    cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  padding: 11px;
+  width: 170px;
+  height: 70px;
+  border: none;
+  background-color: #901c1c;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
+/* #contact_modal {} */
+
 .modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
+  border-radius: 5px;
+  background-color: #db8876;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 35px;
+  margin: auto;
+  position: absolute;
+  top: 50px;
+  left: 25%;
 }
 
 .modal header {
-    justify-content: space-between;
-    width: 100%;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 100%;
 }
 
 .modal header img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
+  font-size: 64px;
+  font-weight: normal;
+  display: block;
+}
+
+.modal header h3 {
+  font-size: 64px;
+  font-weight: normal;
+  display: block;
 }
 
 form {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 80px;
 }
 
 form label {
-    color: #312E2E;
-    font-size: 36px;
+  color: #312e2e;
+  font-size: 36px;
 }
 
 form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: self-start;
+  margin-bottom: 26px;
 }
 
 form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
+  width: 100%;
+  height: 68px;
+  border: none;
+  border-radius: 5px;
+}
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  border: none;
+  border-radius: 5px;
+}
+
+/* lightbox */
+
+.lightbox {
+  display: none;
+  position: absolute;
+  height: 100vh;
+  background: #ff0000;
+  z-index: 10;
+}
+.lightbox__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.arrow {
+  display: block;
+  width: 50px;
+  height: 50px;
+  color: #fff;
 }
