--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,79 @@
-@import url("photographer.css");
+@import url('photographer.css');
 
 body {
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
+  font-family: 'DM Sans', sans-serif;
+  margin: 0;
 }
 
-
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 90px;
 }
 
 h1 {
-    color: #901C1C;
-    margin-right: 100px;
+  color: #901c1c;
+  margin-right: 100px;
+  font-size: 36px;
 }
 
 .logo {
-    height: 50px;
-    margin-left: 100px;
+  height: 50px;
+  margin-left: 100px;
 }
 
 .photographer_section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 70px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .photographer_section article {
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .photographer_section article img {
-    height: 200px;
-    width: 200px;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+  overflow-clip-margin: unset; /* solution - images pixelisées */
+}
+
+.photographer_section article h2 {
+  color: #d3573c;
+  font-size: 36px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  cursor: pointer;
+}
+
+.photographer_section article h3 {
+  color: #901c1c;
+  font-size: 13px;
+  padding: 0;
+  margin: 0;
+}
+
+.photographer_section article p {
+  color: #000;
+  font-size: 10px;
+  padding: 3px 0;
+  margin: 0;
+}
+
+.photographer_section article span {
+  color: #757575;
+  font-size: 9px;
+  padding: 3px 0;
+  margin: 0;
 }
