--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,12 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'DM Sans', sans-serif;
+}
+
+body {
+  height: 100%;
 }
 
 #contact_modal {
@@ -25,7 +30,6 @@
   display: block;
   object-fit: cover;
   border-radius: 50%;
-  overflow-clip-margin: unset; /* solution - images pixelisées */
 }
 
 .photograph-header h2 {
@@ -44,7 +48,7 @@
 }
 
 .photograph-header p {
-  font-size: 18x;
+  font-size: 18px;
   color: #525252;
 }
 
@@ -101,9 +105,6 @@
 .media_page article span {
   color: #757575;
   font-size: 16px;
-  /*position: absolute;*/
-  right: 0px;
-  bottom: 25px;
 }
 
 .contact_button {
@@ -197,20 +198,132 @@ form textarea {
 
 .lightbox {
   display: none;
-  position: absolute;
-  height: 100vh;
-  background: #ff0000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgba(0, 0, 0, 0.9);
+  /* background: rgba(255, 255, 255, 0.9); */
   z-index: 10;
 }
+
+.lightbox_title {
+  color: #fff;
+  display: block;
+}
+
 .lightbox__content {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.lightbox__content img {
+  width: 440px;
+  height: auto;
+}
+
+.leftArrow,
+.rightArrow {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
+  color: #fff;
+}
+.leftArrow {
+  margin-left: 30px;
+}
+.rightArrow {
+  margin-right: 30px;
+}
+.lightbox_close {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  cursor: pointer;
+  z-index: 11;
+}
+
+/* sortBy select menu */
+.sortBy {
+  width: 250px;
+  display: inline-block;
+  padding: 20px 0;
+  margin: 0 0 0 35px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.arrow {
-  display: block;
-  width: 50px;
-  height: 50px;
+.sortBy_title {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.sortBy_content {
+  display: inline-block;
+  padding: 20px;
+  margin: 15px 0px 0px 35px;
+  background: #901c1c;
+  border-radius: 5px;
+}
+
+.sortBy select {
+  font-size: 18px;
+  background: #901c1c;
   color: #fff;
+  border: none;
+}
+
+/* heart icon - like button */
+.heart-icon {
+  user-select: none;
+  position: absolute;
+  right: 10px;
+  bottom: 23px;
+  cursor: pointer;
+}
+.heart-icon.isLiked {
+  color: #c44133;
+}
+.heart-icon:hover {
+  color: #c44133;
+}
+.number-of-likes {
+  user-select: none;
+  position: absolute;
+  right: 25px;
+  bottom: 10px;
+  transform: translate(-80%, -50%);
+  color: #292d34;
+  user-select: none;
+}
+
+/* footer - number of likes & price  */
+.counter {
+  display: block;
+  position: fixed;
+  bottom: -5px;
+  right: 20px;
+  width: auto;
+  height: 55px;
+  background-color: #db8876;
+  font-size: 24px;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.counter_likes {
+  padding-right: 15px;
+}
+
+.counter_price {
+  padding-left: 15px;
 }
