--- a/css/photographer.css
+++ b/css/photographer.css
@@ -156,13 +156,13 @@ body {
 }
 
 .modal header h2 {
-  font-size: 64px;
+  font-size: 54px;
   font-weight: normal;
   display: block;
 }
 
 .modal header h3 {
-  font-size: 64px;
+  font-size: 54px;
   font-weight: normal;
   display: block;
 }
@@ -190,9 +190,12 @@ form div {
 
 form input {
   width: 100%;
-  height: 68px;
+  height: 58px;
   border: none;
   border-radius: 5px;
+  padding: 10px;
+  font-size: 30px;
+  font-weight: 400;
 }
 
 form textarea {
